# SillyTerminalProject

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  ROT.md  app  build.sh  compile_commands.json  rebuild.sh  run.sh
.cache/clangd/index/: ASCIITexture.hpp.C62CB735B0B8D4A4.idx  ASCIITexture.hpp.E58F4B6FE52A8826.idx  Animation.hpp.EAFCF50A45A358EA.idx  Animator.hpp.B447F7C908170C7F.idx  Buffer.hpp.0CA3783F8C97B26E.idx  Buffer.hpp.E33A664AD7A8DCB9.idx  Cell.hpp.CFA3054FD4A7386D.idx  Cell.hpp.F68BFC88DE675542.idx  Cell.hpp.FC93910D9FA99953.idx  Color.cpp.64B8FC371CB1B10F.idx  Color.hpp.8F184DB86190EBD1.idx  Color.hpp.A6E1BDBD7C2CEED2.idx  Color.hpp.F6EE2F7C0A0C0696.idx  IDrawComponent.hpp.16032B2DDED932A3.idx  IDrawComponent.hpp.234A48CEC76B02E1.idx  IDrawComponent.hpp.9140B7DC9BC9A00F.idx  Pixel.cpp.4D8AD78DF6B8A313.idx  Pixel.hpp.12B02C48F9AFBFC1.idx  Pixel.hpp.B18F9B985D4A08AF.idx  Rect.hpp.36994C73C3894200.idx  Rect.hpp.BA4C9D1AFD4380DC.idx  SafePath.hpp.FA3A29D71E81703B.idx  Snowflake.hpp.FDA6E2F187E3DCBD.idx  SnowflakeSystem.hpp.6B63136C53AE673B.idx  (+17 more)
assets/: walking.txt
include/: Animation.hpp  Animator.hpp  SafePath.hpp  Snowflake.hpp  SnowflakeSystem.hpp  Stickman.hpp
rot/: CMakeLists.txt
rot/include/ROT/: ASCIITexture.hpp  Buffer.hpp  Cell.hpp  Color.hpp  IDrawComponent.hpp  Pixel.hpp  Rect.hpp  Sprite.hpp  TerminalWindow.hpp  Text.hpp  Texture.hpp  TextureRegion.hpp  Vec2.hpp
rot/src/: ASCIITexture.cpp  Color.cpp  TerminalWindow.cpp  Text.cpp
src/: Animator.cpp  SafePath.cpp  Snowflake.cpp  SnowflakeSystem.cpp  Stickman.cpp  main.cpp
